--- a/src/components/Navigator.scss
+++ b/src/components/Navigator.scss
@@ -14,7 +14,7 @@
 
   .Actions {
     line-height: 32px;
-    padding: 16px 0;
+    padding: 12px 0;
 
     .ActionItem {
       display: inline-block;
@@ -24,7 +24,9 @@
         color: $primary-color;
         font-weight: bold;
         display: inline-block;
+      }
 
+      :global(.underline-link) {
         &::after {
           content: '';
           background-color: $secondary-color;
