--- a/src/components/SheetsSection.scss
+++ b/src/components/SheetsSection.scss
@@ -30,9 +30,10 @@
           .SheetDetails {
             padding: 8px;
 
-            .SheetDescription {
+            .SheetTitle {
               color: $primary-color;
-              font-size: 14px;
+              font-size: 15px;
+              font-weight: bold;
             }
 
             .SheetMiscs {
