--- a/src/components/StashesSection.scss
+++ b/src/components/StashesSection.scss
@@ -50,6 +50,12 @@
           .StashMiscs {
             float: right;
 
+            .StashSmallMisc {
+              margin: 0 0 4px 8px;
+              font-size: 12px;
+              color: $secondary-tint-color;
+            }
+
             .StashMisc {
               margin: 0 0 8px 8px;
               font-size: 12px;
