--- a/src/components/NewSheetModal.scss
+++ b/src/components/NewSheetModal.scss
@@ -1,3 +1,5 @@
+@import 'shared.scss';
+
 .Component {
   display: block;
 
@@ -10,8 +12,21 @@
 }
 
 .InputWrapper {
-  @media(min-width: 768px) {
-    padding: 0 32px 0 0;
+  .Radio {
+    text-align: center;
+    margin: 0 0 8px 0;
+
+    :global(.ant-radio-button-wrapper), :global(.ant-radio-button-wrapper-checked) {
+      border-radius: 0;
+      border: 0;
+      box-shadow: 0 0 0 0;
+      font-weight: bold;
+      font-size: 16px;
+
+      &::before, &::after {
+        width: 0;
+      }
+    }
   }
 
   .Uploader {
